--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
               </div>
               <div>
-                <h3>Brand and reputation Assets:</h3>
+                <h3>Brand & reputation Assets:</h3>
                 <ul>
                   <li>brand recognition,</li>
                   <li>goodwill,</li>
@@ -59,7 +59,7 @@
                 </ul>
               </div>
               <div>
-                <h3>Human capital:</h3>
+                <h3>Human capital & org. methodology:</h3>
                 <ul>
                   <li>proprietary knowledge,</li>
                   <li>training programs,</li>
@@ -79,8 +79,8 @@
               <li><b>Intellectual property rights:</b> ensuring proper ownership and protection of patents, trademarks, and copyrights,</li>
               <li><b>Regulatory compliance:</b> navigating different legal frameworks across jurisdictions for intangible assets,</li>
               <li><b>Contractual agreements:</b> transfer agreements, and partnership disputes related to intangible assets,</li>
-              <li><b>Taxation and reporting:</b> variability in tax laws and financial reporting requirements for intangible assets,</li>
-              <li><b>Valuation and litigation risks:</b> legal disputes over asset valuation, especially in mergers, acquisitions, and bankruptcies,</li>
+              <li><b>Taxation & reporting:</b> variability in tax laws and financial reporting requirements for intangible assets,</li>
+              <li><b>Valuation & litigation risks:</b> legal disputes over asset valuation, especially in mergers, acquisitions, and bankruptcies,</li>
               <li><b>Challenges for appraisers:</b> difficulties in standardizing valuation methods and ensuring compliance with legal frameworks, which leads to inconsistencies in asset valuation.</li>
             </ul>
           </section>
