--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
       <div class='overlay'>
         <div class='wrap'>
           <section class='container'>
-            <h2>Challenges for Appraisers</h2>
+            <h2>Challenges for appraisers</h2>
             <div class='cardlist'>
               <div>
-                <h3>Lack of Standardized Valuation Methods:</h3>
+                <h3>Lack of standardized valuation methods:</h3>
                 <p>Unlike physical assets, intangible assets often lack clear valuation benchmarks, making it difficult to establish a universally accepted valuation process.</p>
               </div>
               <div>
-                <h3>Fluctuating Market Conditions:</h3>
+                <h3>Fluctuating market conditions:</h3>
                 <p>Digital assets, especially cryptocurrencies and NFTs, experience rapid value changes, requiring appraisers to constantly update valuation models.</p>
               </div>
               <div>
-                <h3>Regulatory and Legal Uncertainty:</h3>
+                <h3>Regulatory and legal uncertainty:</h3>
                 <p>Evolving legal frameworks can impact asset valuation, making it challenging to ensure compliance with both domestic and international standards.</p>
               </div>
               <div>
-                <h3>Difficulty in Measuring Economic Benefit:</h3>
+                <h3>Difficulty in measuring economic benefit:</h3>
                 <p>The impact of reputation, brand value, or customer loyalty is often subjective, leading to challenges in quantifying their true financial contribution.</p>
               </div>
             </div>
@@ -116,16 +116,16 @@
       <div class='overlay'>
         <div class='wrap'>
           <section class='container slide-5'>
-            <h2>Solutions and Innovations</h2>
-            <h3>Adoption of AI and Big Data Analytics:</h3>
+            <h2>Solutions and innovations</h2>
+            <h3>Adoption of AI and big data analytics:</h3>
             <p class='pd-bottom-sm'>Advanced algorithms can analyze market trends, predict asset value fluctuations, and provide real-time valuation insights, improving accuracy and efficiency.</p>
-            <h3>Blockchain Technology for Digital Assets:</h3>
+            <h3>Blockchain technology for digital assets:</h3>
             <p class='pd-bottom-sm'>Blockchain ensures transparency, security, and traceability in digital asset valuation, reducing fraud and improving verification processes.</p>
-            <h3>Enhanced Regulatory Frameworks:</h3>
+            <h3>Enhanced regulatory frameworks:</h3>
             <p class='pd-bottom-sm'>Governments and organizations are working on standardizing guidelines for valuing intangible assets, providing more clarity and stability for appraisers.</p>
-            <h3>Hybrid Valuation Approaches:</h3>
+            <h3>Hybrid valuation approaches:</h3>
             <p class='pd-bottom-sm'>Combining income-based, market-based, and cost-based approaches helps ensure a more holistic and accurate valuation process.</p>
-            <h3>Use of Machine Learning Models</h3>
+            <h3>Use of machine learning models</h3>
             <p class='pd-bottom-sm'>AI-driven models help assess brand reputation and predict customer loyalty impact on asset value, reducing subjectivity in the valuation process.</p>
           </section>
         </div>
